UPDATING THE MACHINE LEARNING FILE

--- a/python_graphics.ipynb
+++ b/python_graphics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "[9520 rows x 11 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -379,72 +379,72 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6509</th>\n",
+       "      <th>7075</th>\n",
        "      <td>Apartamento</td>\n",
-       "      <td>Apartamento en venta en Usaquén</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>92</td>\n",
-       "      <td>Usaquén</td>\n",
-       "      <td>Usaquén</td>\n",
-       "      <td>$ 491.000.000</td>\n",
-       "      <td>$</td>\n",
-       "      <td>491000000</td>\n",
-       "      <td>491.0</td>\n",
-       "      <td>5.336957</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8081</th>\n",
-       "      <td>Apartamento</td>\n",
-       "      <td>Apartamento en venta en San Patricio</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>54</td>\n",
-       "      <td>San Patricio</td>\n",
-       "      <td>USAQUÉN: Country Club + Santa Bárbara</td>\n",
-       "      <td>$ 420.000.000</td>\n",
-       "      <td>$</td>\n",
-       "      <td>420000000</td>\n",
-       "      <td>420.0</td>\n",
-       "      <td>7.777778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7697</th>\n",
-       "      <td>Apartamento</td>\n",
-       "      <td>Apartamento en venta en Cedritos</td>\n",
-       "      <td>6</td>\n",
+       "      <td>Apartamento en venta en Puente Aranda</td>\n",
        "      <td>3</td>\n",
-       "      <td>189</td>\n",
-       "      <td>Cedritos</td>\n",
-       "      <td>Usaquén</td>\n",
-       "      <td>$ 550.000.000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>57</td>\n",
+       "      <td>Puente Aranda</td>\n",
+       "      <td>PUENTE ARANDA: Zona Industrial + Puente Aranda</td>\n",
+       "      <td>$ 260.000.000</td>\n",
        "      <td>$</td>\n",
-       "      <td>550000000</td>\n",
-       "      <td>550.0</td>\n",
-       "      <td>2.910053</td>\n",
+       "      <td>260000000</td>\n",
+       "      <td>260.0</td>\n",
+       "      <td>4.561404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1254</th>\n",
+       "      <td>Apartamento</td>\n",
+       "      <td>Apartamento en venta en Kennedy</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>68</td>\n",
+       "      <td>Kennedy</td>\n",
+       "      <td>Kennedy Central</td>\n",
+       "      <td>$ 296.000.000</td>\n",
+       "      <td>$</td>\n",
+       "      <td>296000000</td>\n",
+       "      <td>296.0</td>\n",
+       "      <td>4.352941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6930</th>\n",
+       "      <td>Casa</td>\n",
+       "      <td>Casa en venta en Suba</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>425</td>\n",
+       "      <td>Suba</td>\n",
+       "      <td>Suba</td>\n",
+       "      <td>$ 2.400.000.000</td>\n",
+       "      <td>$</td>\n",
+       "      <td>2400000000</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>5.647059</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Tipo                           Descripcion  Habitaciones  Banos  \\\n",
-       "6509  Apartamento       Apartamento en venta en Usaquén             4      2   \n",
-       "8081  Apartamento  Apartamento en venta en San Patricio             1      1   \n",
-       "7697  Apartamento      Apartamento en venta en Cedritos             6      3   \n",
+       "             Tipo                            Descripcion  Habitaciones  Banos  \\\n",
+       "7075  Apartamento  Apartamento en venta en Puente Aranda             3      2   \n",
+       "1254  Apartamento        Apartamento en venta en Kennedy             3      2   \n",
+       "6930         Casa                  Casa en venta en Suba             3      4   \n",
        "\n",
-       "      Area        Barrio                                    UPZ  \\\n",
-       "6509    92       Usaquén                                Usaquén   \n",
-       "8081    54  San Patricio  USAQUÉN: Country Club + Santa Bárbara   \n",
-       "7697   189      Cedritos                                Usaquén   \n",
+       "      Area         Barrio                                             UPZ  \\\n",
+       "7075    57  Puente Aranda  PUENTE ARANDA: Zona Industrial + Puente Aranda   \n",
+       "1254    68        Kennedy                                 Kennedy Central   \n",
+       "6930   425           Suba                                            Suba   \n",
        "\n",
-       "              Valor Moneda     Precio  Precio_Millon  Valor_m2_Millon  \n",
-       "6509  $ 491.000.000      $  491000000          491.0         5.336957  \n",
-       "8081  $ 420.000.000      $  420000000          420.0         7.777778  \n",
-       "7697  $ 550.000.000      $  550000000          550.0         2.910053  "
+       "                Valor Moneda      Precio  Precio_Millon  Valor_m2_Millon  \n",
+       "7075    $ 260.000.000      $   260000000          260.0         4.561404  \n",
+       "1254    $ 296.000.000      $   296000000          296.0         4.352941  \n",
+       "6930  $ 2.400.000.000      $  2400000000         2400.0         5.647059  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
        "[149 rows x 7 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +827,7 @@
        "[149 rows x 6 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1035,7 @@
        "[149 rows x 7 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
        "4         6.290551  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1425,7 +1425,7 @@
        "[149 rows x 8 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1614,7 @@
        "148  544453.061408      4049.160722         4.572009  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1626,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1782,6 +1782,16 @@
     "ax = sns.boxplot(x=\"Barrio\", y=\"Precio_Millon\", data=DataGrafico4)\n",
     "ax.tick_params(axis='x', rotation=45)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DESCARGAMOS NUSTRO DATAFRAME PARA HACER UN MERGE CON EL ARCHIVO DE datos_dane (Machine_Learning.ipynb)\n",
+    "# df.to_csv('./Documentation/Data/inmuebles.csv', index=False)"
    ]
   }
  ],
