MACHINE LEARNING DATA WITH NEW LOWER OUTLAYERS

--- a/python_Analysis.ipynb
+++ b/python_Analysis.ipynb
@@ -13,18 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as mlt\n",
-    "import seaborn as sns"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +157,7 @@
        "4   USAQUÉN: Country Club + Santa Bárbara  24,4684068319009  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +178,7 @@
        "(106467, 11)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +198,7 @@
        "(86504, 11)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,22 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_4964\\4178523720.py:2: DtypeWarning: Columns (4,25,30,47) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_24528\\4178523720.py:2: DtypeWarning: Columns (4,25,30,47) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  datos_c = pd.read_csv('./Documentation/Data/archivos-dane/CondicionesHabitacionalesDelHogar(Capítulo C).csv',sep=';',encoding='latin-1')\n",
-      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_4964\\4178523720.py:3: DtypeWarning: Columns (66) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_24528\\4178523720.py:3: DtypeWarning: Columns (66) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  datos_e = pd.read_csv('./Documentation/Data/archivos-dane/ComposiciónDelHogaryDemografía(Capítulo E).csv',sep=';',encoding='latin-1')\n",
-      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_4964\\4178523720.py:4: DtypeWarning: Columns (81) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_24528\\4178523720.py:4: DtypeWarning: Columns (81) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  datos_h = pd.read_csv('./Documentation/Data/archivos-dane/Educación(Capítulo H).csv',sep=';',encoding='latin-1')\n",
-      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_4964\\4178523720.py:5: DtypeWarning: Columns (114,117,122,126,164,166,168) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_24528\\4178523720.py:5: DtypeWarning: Columns (114,117,122,126,164,166,168) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  datos_l = pd.read_csv('./Documentation/Data/archivos-dane/PercepciónSobreLasCondicionesDeVidayElDesempeñoInstitucional(Capítulo L).csv',sep=';',encoding='latin-1')\n",
-      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_4964\\4178523720.py:6: DtypeWarning: Columns (27,58,60,62,64,66,104,114,120,124,126,129,131,133) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_24528\\4178523720.py:6: DtypeWarning: Columns (27,58,60,62,64,66,104,114,120,124,126,129,131,133) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  datos_k = pd.read_csv('./Documentation/Data/archivos-dane/FuerzaDeTrabajo(Capítulo K).csv',sep=';',encoding='latin-1')\n"
      ]
     }
@@ -243,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +250,7 @@
        "(86504, 73)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +272,7 @@
        "(87061, 214)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +302,6 @@
     }
    ],
    "source": [
-    "\n",
     "datos_dane.info()"
    ]
   }
